--- a/新しいフォルダー (2)/fbEngine/fbEngine/fbEngine.vcxproj
+++ b/新しいフォルダー (2)/fbEngine/fbEngine/fbEngine.vcxproj
@@ -29,7 +29,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -154,6 +154,7 @@
     <ClInclude Include="Movie.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="PhysicsCallback.h" />
+    <ClInclude Include="Rigid.h" />
     <ClInclude Include="SpriteAnimation.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="ShadowCamera.h" />
@@ -250,6 +251,7 @@
     <ClCompile Include="PlatePrimitive.cpp" />
     <ClCompile Include="Random.cpp" />
     <ClCompile Include="RenderTargetManager.cpp" />
+    <ClCompile Include="Rigid.cpp" />
     <ClCompile Include="RigidBody.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
