--- a/新しいフォルダー (2)/Decide/Decide/Decide.vcxproj.filters
+++ b/新しいフォルダー (2)/Decide/Decide/Decide.vcxproj.filters
@@ -20,6 +20,9 @@
     <Filter Include="Object\GameObject\Player">
       <UniqueIdentifier>{7bb9c7ae-50ea-4b2b-908f-89d06d8287ca}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Object\GameObject\Player\State">
+      <UniqueIdentifier>{59fec6f6-f883-40e8-bb9c-2ed4175f2f27}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -48,6 +51,9 @@
     </ClInclude>
     <ClInclude Include="Sky.h">
       <Filter>Object\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerState.h">
+      <Filter>Object\GameObject\Player\State</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
