--- a/新しいフォルダー (2)/Decide/Decide/Decide.vcxproj
+++ b/新しいフォルダー (2)/Decide/Decide/Decide.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="Ground.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerState.h" />
+    <ClInclude Include="PlayerStateRun.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sky.h" />
     <ClInclude Include="TitleScene.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="GameShadowCamera.cpp" />
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerStateRun.cpp" />
     <ClCompile Include="Sky.cpp" />
     <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
