--- a/新しいフォルダー (2)/Decide/Decide/Decide.vcxproj.filters
+++ b/新しいフォルダー (2)/Decide/Decide/Decide.vcxproj.filters
@@ -20,6 +20,12 @@
     <Filter Include="Object\GameObject\Player">
       <UniqueIdentifier>{7bb9c7ae-50ea-4b2b-908f-89d06d8287ca}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Object\GameObject\Enemy">
+      <UniqueIdentifier>{3a9981de-6ade-4d8b-a91b-cb293836348f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Object\GameObject\Enemy\HFSM">
+      <UniqueIdentifier>{733b9d53-8cd0-42af-a23d-12253d32e114}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -48,6 +54,12 @@
     </ClInclude>
     <ClInclude Include="Sky.h">
       <Filter>Object\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyCharacter.h">
+      <Filter>Object\GameObject\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyState.h">
+      <Filter>Object\GameObject\Enemy\HFSM</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -88,6 +100,12 @@
     </ClCompile>
     <ClCompile Include="Sky.cpp">
       <Filter>Object\GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyCharacter.cpp">
+      <Filter>Object\GameObject\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyState.cpp">
+      <Filter>Object\GameObject\Enemy\HFSM</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
