Enemyクラス追加 Pullのためのコミット

--- a/新しいフォルダー (2)/Decide/Decide/Decide.vcxproj
+++ b/新しいフォルダー (2)/Decide/Decide/Decide.vcxproj
@@ -154,6 +154,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnemyCharacter.h" />
     <ClInclude Include="EnemyState.h" />
     <ClInclude Include="GameCamera.h" />
@@ -171,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Decide.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemyCharacter.cpp" />
     <ClCompile Include="EnemyState.cpp" />
     <ClCompile Include="GameCamera.cpp" />
