プレイヤーステートアイドル追加 可変フレームに変更 *キャラクターコントローラー *アニメーションの再生スピード

--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="Ground.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerState.h" />
+    <ClInclude Include="PlayerStateIdol.h" />
     <ClInclude Include="PlayerStateRun.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sky.h" />
@@ -175,6 +176,7 @@
     <ClCompile Include="GameShadowCamera.cpp" />
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerStateIdol.cpp" />
     <ClCompile Include="PlayerStateRun.cpp" />
     <ClCompile Include="Sky.cpp" />
     <ClCompile Include="TitleScene.cpp" />
