視野角判定実装。 発見ステート追加。 エネミーのヒエラルキーステートパターン実装。 エネミー以外からステート切り替えを呼ぶ関数を実装。

--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="GameLight.h" />
     <ClInclude Include="GameObject\Enemy\Enemy.h" />
     <ClInclude Include="GameObject\Enemy\EnemyCharacter.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyTranslationState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWaitState.h" />
@@ -184,6 +185,7 @@
     <ClCompile Include="GameLight.cpp" />
     <ClCompile Include="GameObject\Enemy\Enemy.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyCharacter.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyTranslationState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWaitState.cpp" />
