プレイヤーフォルダ分け

--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -162,15 +162,15 @@
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyTranslationState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWanderingState.h" />
+    <ClInclude Include="GameObject\Player\Player.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerState.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateAttack.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateIdol.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateRun.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="GameShadowCamera.h" />
     <ClInclude Include="GameSystem.h" />
     <ClInclude Include="Ground.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="PlayerState.h" />
-    <ClInclude Include="PlayerStateAttack.h" />
-    <ClInclude Include="PlayerStateIdol.h" />
-    <ClInclude Include="PlayerStateRun.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sky.h" />
     <ClInclude Include="TitleScene.h" />
@@ -185,13 +185,13 @@
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyTranslationState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWanderingState.cpp" />
+    <ClCompile Include="GameObject\Player\Player.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateAttack.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateIdol.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateRun.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="GameShadowCamera.cpp" />
     <ClCompile Include="Ground.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="PlayerStateAttack.cpp" />
-    <ClCompile Include="PlayerStateIdol.cpp" />
-    <ClCompile Include="PlayerStateRun.cpp" />
     <ClCompile Include="Sky.cpp" />
     <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
