--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -37,9 +37,6 @@
     <ClInclude Include="TitleScene.h">
       <Filter>Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h">
-      <Filter>Object\GameObject\Player</Filter>
-    </ClInclude>
     <ClInclude Include="GameCamera.h">
       <Filter>Object\GameObject</Filter>
     </ClInclude>
@@ -58,15 +55,6 @@
     <ClInclude Include="Sky.h">
       <Filter>Object\GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="PlayerState.h">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerStateRun.h">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerStateIdol.h">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject\Enemy\Enemy.h">
       <Filter>Object\GameObject\Enemy</Filter>
     </ClInclude>
@@ -76,14 +64,27 @@
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyState.h">
       <Filter>Object\GameObject\Enemy\HFSM</Filter>
     </ClInclude>
-    <ClInclude Include="PlayerStateAttack.h">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyTranslationState.h">
       <Filter>Object\GameObject\Enemy\HFSM</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWanderingState.h">
       <Filter>Object\GameObject\Enemy\HFSM</Filter>
+    </ClInclude>
+    <ClInclude Include="AttackCollision.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateAttack.h">
+      <Filter>Object\GameObject\Player\PlayerState</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateIdol.h">
+      <Filter>Object\GameObject\Player\PlayerState</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateRun.h">
+      <Filter>Object\GameObject\Player\PlayerState</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerState.h">
+      <Filter>Object\GameObject\Player\PlayerState</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Player\Player.h">
+      <Filter>Object\GameObject\Player</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -104,9 +105,6 @@
     <ClCompile Include="TitleScene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>Object\GameObject\Player</Filter>
-    </ClCompile>
     <ClCompile Include="GameLight.cpp">
       <Filter>Object\GameObject</Filter>
     </ClCompile>
@@ -122,14 +120,8 @@
     <ClCompile Include="Sky.cpp">
       <Filter>Object\GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="PlayerStateRun.cpp">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClCompile>
     <ClCompile Include="GameCamera.cpp">
       <Filter>Object\GameObject</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerStateIdol.cpp">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\Enemy\Enemy.cpp">
       <Filter>Object\GameObject\Enemy</Filter>
@@ -140,14 +132,24 @@
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyState.cpp">
       <Filter>Object\GameObject\Enemy\HFSM</Filter>
     </ClCompile>
-    <ClCompile Include="PlayerStateAttack.cpp">
-      <Filter>Object\GameObject\Player\PlayerState</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyTranslationState.cpp">
       <Filter>Object\GameObject\Enemy\HFSM</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWanderingState.cpp">
       <Filter>Object\GameObject\Enemy\HFSM</Filter>
+    </ClCompile>
+    <ClCompile Include="AttackCollision.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateIdol.cpp">
+      <Filter>Object\GameObject\Player\PlayerState</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateRun.cpp">
+      <Filter>Object\GameObject\Player\PlayerState</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateAttack.cpp">
+      <Filter>Object\GameObject\Player\PlayerState</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Player\Player.cpp">
+      <Filter>Object\GameObject\Player</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
