--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -165,15 +165,16 @@
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWaitState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWanderingState.h" />
     <ClInclude Include="GameObject\Enemy\SearchViewAngle.h" />
+    <ClInclude Include="GameObject\HistoryChip\FireChip.h" />
+    <ClInclude Include="GameObject\Player\Player.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerState.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateAttack.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateIdol.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateRun.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="GameShadowCamera.h" />
     <ClInclude Include="GameSystem.h" />
     <ClInclude Include="Ground.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="PlayerState.h" />
-    <ClInclude Include="PlayerStateAttack.h" />
-    <ClInclude Include="PlayerStateIdol.h" />
-    <ClInclude Include="PlayerStateRun.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sky.h" />
     <ClInclude Include="TitleScene.h" />
@@ -191,13 +192,14 @@
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWaitState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWanderingState.cpp" />
     <ClCompile Include="GameObject\Enemy\SearchViewAngle.cpp" />
+    <ClCompile Include="GameObject\HistoryChip\FireChip.cpp" />
+    <ClCompile Include="GameObject\Player\Player.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateAttack.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateIdol.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateRun.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="GameShadowCamera.cpp" />
     <ClCompile Include="Ground.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="PlayerStateAttack.cpp" />
-    <ClCompile Include="PlayerStateIdol.cpp" />
-    <ClCompile Include="PlayerStateRun.cpp" />
     <ClCompile Include="Sky.cpp" />
     <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
