--- a/game/fbEngine/fbEngine/fbEngine.vcxproj
+++ b/game/fbEngine/fbEngine/fbEngine.vcxproj
@@ -20,9 +20,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CharacterController.cpp" />
-    <ClCompile Include="_Effect\Bloom.cpp" />
     <ClCompile Include="_Effect\Blur.cpp" />
     <ClCompile Include="_Effect\EffectManager.cpp" />
+    <ClCompile Include="_Effect\PostEffect\AntiAliasing.cpp" />
+    <ClCompile Include="_Effect\PostEffect\Bloom.cpp" />
+    <ClCompile Include="_Effect\PostEffect\DepthofField.cpp" />
     <ClCompile Include="_Effect\PreRender\ShadowMap.cpp" />
     <ClCompile Include="_Include\stdafx.cpp" />
     <ClCompile Include="_Inputs\InputManager.cpp" />
@@ -88,10 +90,12 @@
   <ItemGroup>
     <ClInclude Include="CharacterController.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="_Effect\Bloom.h" />
     <ClInclude Include="_Effect\Blur.h" />
     <ClInclude Include="_Effect\Effect.h" />
     <ClInclude Include="_Effect\EffectManager.h" />
+    <ClInclude Include="_Effect\PostEffect\AntiAliasing.h" />
+    <ClInclude Include="_Effect\PostEffect\Bloom.h" />
+    <ClInclude Include="_Effect\PostEffect\DepthofField.h" />
     <ClInclude Include="_Effect\PreRender\ShadowMap.h" />
     <ClInclude Include="_Include\CollisionInclude.h" />
     <ClInclude Include="_Include\CollisionEnum.h" />
