--- a/game/fbEngine/fbEngine/fbEngine.vcxproj.filters
+++ b/game/fbEngine/fbEngine/fbEngine.vcxproj.filters
@@ -235,7 +235,9 @@
       <Filter>Object\GameObject</Filter>
     </ClCompile>
     <ClCompile Include="CharacterController.cpp" />
-    <ClCompile Include="_Object\_GameObject\Button.cpp" />
+    <ClCompile Include="_Object\_GameObject\Button.cpp">
+      <Filter>Object\GameObject</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="_Inputs\InputManager.h">
